...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_newWalletName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_walletName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/tv_newWalletSecondaryCurrency"
        app:layout_constraintEnd_toEndOf="@+id/spinner_newWalletMainCurrency"
        app:layout_constraintStart_toStartOf="@+id/spinner_newWalletMainCurrency"
        app:layout_constraintTop_toTopOf="@+id/tv_newWalletSecondaryCurrency" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_walletType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_walletType"
        app:layout_constraintEnd_toEndOf="@+id/spinner_newWalletSecondaryCurrency"
        app:layout_constraintStart_toStartOf="@+id/tv_newWalletSecondaryCurrency"
...
